package javazik.model;

/**
 * Interface pour les objets qui peuvent se décrire
 * en version courte ou détaillée.
 */
public interface Descriptible {
    String descriptionCourte();
    String descriptionDetaillee();
}
